force-app/main/default/objects/Historical_Rankings__c/Historical_Rankings__c.object-meta.xml
<CustomObject>
    <description>To track rankings on an Account . The C-Team would like to havethese rankings for analysis.</description>
    <label>Historical Rankings</label>
    <nameField>
        <displayFormat>HR-{0000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Historical Rankings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>