force-app/main/default/objects/Historical_Rankings__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Historical rankings are defined by Account</description>
    <inlineHelpText>Historical rankings are defined by Account</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Historical Rankings</relationshipLabel>
    <relationshipName>Historical_Rankings1</relationshipName>
    <type>Lookup</type>
</CustomField>