force-app/main/default/objects/Historical_Rankings__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Ranking Type</description>
    <inlineHelpText>Ranking Type</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Accounting Today</fullName>
            </value>
            <value>
                <fullName>ALB 30</fullName>
            </value>
            <value>
                <fullName>AmLaw</fullName>
            </value>
            <value>
                <fullName>AmLaw Global 100</fullName>
            </value>
            <value>
                <fullName>Aus Top 50</fullName>
            </value>
            <value>
                <fullName>Canada Lexpert 30</fullName>
            </value>
            <value>
                <fullName>GL 100</fullName>
            </value>
            <value>
                <fullName>LB100</fullName>
            </value>
            <value>
                <fullName>NLJ</fullName>
            </value>
            <value>
                <fullName>PEI</fullName>
            </value>
            <value>
                <fullName>The Lawyer APAC 100</fullName>
            </value>
            <value>
                <fullName>The Lawyer APAC 150</fullName>
            </value>
            <value>
                <fullName>The Lawyer Euro 100</fullName>
            </value>
            <value>
                <fullName>The Lawyer UK 200</fullName>
            </value>
            <value>
                <fullName>UK Insider 250</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>