force-app/main/default/objects/Historical_Rankings__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <description>Year when the ranking was given</description>
    <inlineHelpText>Year when the ranking was given</inlineHelpText>
    <label>Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>